<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/shape_button_white"
	android:gravity="center_horizontal"
	android:padding="@dimen/dim_gap_5"
	android:orientation="vertical">
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/dim_gap_4"
		android:textColor="@android:color/black"
		android:textSize="@dimen/dim_font_3"
		android:text="@string/str_payment_account_unbind"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/edt_bg_selector"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/dim_gap_1"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_auth_code"
			android:layout_weight="1.2"/>

		<EditText
			android:id="@+id/edtVerifyCode"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:gravity="center"
			android:maxLength="4"
			android:background="@android:color/transparent"
			android:layout_weight="2.5"
			android:hint="@string/str_acquire_code_hint">
		</EditText>

		<Button
			android:id="@+id/btnAcquire"
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:textAllCaps="false"
			android:paddingLeft="@dimen/dim_gap_2"
			android:paddingRight="@dimen/dim_gap_2"
			android:background="@drawable/selector_button_orange"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/white"
			android:text="@string/str_acquire_code"
			android:layout_weight="2.3" />

	</LinearLayout>
	<TextView
		android:id="@+id/tvRequireAcquire"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:paddingRight="@dimen/dim_gap_1"
		android:paddingBottom="@dimen/dim_gap_2"
		android:textColor="@android:color/holo_red_dark"
		android:text="@string/str_required"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/dim_gap_4"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">
			<TextView
				android:id="@+id/tvConfirm"
				android:layout_width="@dimen/dim_button_size"
				android:layout_height="wrap_content"
				android:background="@drawable/selector_button_gray"
				android:paddingTop="@dimen/dim_gap_1"
				android:paddingBottom="@dimen/dim_gap_1"
				android:paddingRight="@dimen/dim_gap_2"
				android:paddingLeft="@dimen/dim_gap_2"
				android:gravity="center"
				android:maxLines="1"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_2"
				android:text="@string/str_confirm"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical">
			<TextView
				android:id="@+id/tvCancel"
				android:layout_width="@dimen/dim_button_size"
				android:layout_height="wrap_content"
				android:background="@drawable/selector_button_gray"
				android:paddingTop="@dimen/dim_gap_1"
				android:paddingBottom="@dimen/dim_gap_1"
				android:paddingRight="@dimen/dim_gap_2"
				android:paddingLeft="@dimen/dim_gap_2"
				android:gravity="center"
				android:maxLines="1"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_2"
				android:text="@string/str_cancel"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>