<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/white"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clickable="true">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/title_bar_height"
			android:background="@color/color_tab_selected">
			<ImageView
				android:id="@+id/ivBack"
				android:layout_width="@dimen/dim_icon_size"
				android:layout_height="@dimen/dim_icon_size"
				android:layout_centerVertical="true"
				android:layout_margin="@dimen/dim_gap_2"
				android:src="@drawable/ic_back_white"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:textColor="@android:color/white"
				android:textSize="@dimen/dim_font_3"
				android:text="@string/str_change_password"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dim_gap_7"
			android:layout_marginBottom="@dimen/dim_gap_2"
			android:layout_marginLeft="@dimen/dim_gap_5"
			android:layout_marginRight="@dimen/dim_gap_5">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/dim_gap_3"
				android:background="@drawable/edt_bg_selected"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_3"
				android:text="@string/str_account_number"/>
			<EditText
				android:id="@+id/edtAccountNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dim_gap_9"
				android:background="@android:color/transparent"
				android:layout_centerVertical="true"
				android:maxLength="20"
				android:gravity="right"
				android:padding="@dimen/dim_gap_3"
				android:textSize="@dimen/dim_font_2"
				android:inputType="number"
				android:hint="@string/str_input_account_number"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dim_gap_2"
			android:layout_marginBottom="@dimen/dim_gap_2"
			android:layout_marginLeft="@dimen/dim_gap_5"
			android:layout_marginRight="@dimen/dim_gap_5">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/dim_gap_3"
				android:background="@drawable/edt_bg_selected"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_3"
				android:text="@string/str_new_password"/>
			<EditText
				android:id="@+id/edtNewPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dim_gap_9"
				android:background="@android:color/transparent"
				android:layout_centerVertical="true"
				android:maxLength="20"
				android:gravity="right"
				android:padding="@dimen/dim_gap_3"
				android:textSize="@dimen/dim_font_2"
				android:inputType="textPassword"
				android:hint="@string/str_input_new_password"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dim_gap_2"
			android:layout_marginBottom="@dimen/dim_gap_2"
			android:layout_marginLeft="@dimen/dim_gap_5"
			android:layout_marginRight="@dimen/dim_gap_5">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/dim_gap_3"
				android:background="@drawable/edt_bg_selected"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_3"
				android:text="@string/str_confirm_password"/>
			<EditText
				android:id="@+id/edtConfirmPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dim_gap_9"
				android:background="@android:color/transparent"
				android:layout_centerVertical="true"
				android:maxLength="20"
				android:gravity="right"
				android:padding="@dimen/dim_gap_3"
				android:textSize="@dimen/dim_font_2"
				android:inputType="textPassword"
				android:hint="@string/str_input_confirm_password"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dim_gap_2"
			android:layout_marginBottom="@dimen/dim_gap_2"
			android:layout_marginLeft="@dimen/dim_gap_5"
			android:layout_marginRight="@dimen/dim_gap_5">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/dim_gap_3"
				android:background="@drawable/edt_bg_selected"
				android:textColor="@android:color/black"
				android:textSize="@dimen/dim_font_3"
				android:text="@string/str_auth_code"/>
			<EditText
				android:id="@+id/edtAcquireCode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dim_gap_9"
				android:layout_toLeftOf="@+id/ID_BUTTON_ACQUIRE"
				android:background="@android:color/transparent"
				android:layout_centerVertical="true"
				android:maxLength="4"
				android:gravity="right"
				android:padding="@dimen/dim_gap_3"
				android:textSize="@dimen/dim_font_2"
				android:inputType="textPassword"
				android:hint="@string/str_acquire_code_hint"/>
			<Button
				android:id="@+id/btnAcquire"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:textAllCaps="false"
				android:paddingLeft="@dimen/dim_gap_2"
				android:paddingRight="@dimen/dim_gap_2"
				android:background="@drawable/selector_button_orange"
				android:textSize="@dimen/dim_font_2"
				android:textColor="@android:color/white"
				android:text="@string/str_acquire_code"/>
		</RelativeLayout>
		<TextView
			android:id="@+id/btnConfirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/dim_gap_10"
			android:background="@drawable/selector_small_button_fill"
			android:paddingTop="@dimen/dim_gap_2"
			android:paddingBottom="@dimen/dim_gap_2"
			android:paddingLeft="@dimen/dim_gap_6"
			android:paddingRight="@dimen/dim_gap_6"
			android:textSize="@dimen/dim_font_2"
			android:textColor="@android:color/white"
			android:text="@string/str_confirm"/>
	</LinearLayout>
</ScrollView>