<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	android:orientation="vertical"
	android:clickable="true">
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/title_bar_height"
		android:background="@color/color_tab_selected">
		<ImageView
			android:id="@+id/ivBack"
			android:layout_width="@dimen/dim_icon_size"
			android:layout_height="@dimen/dim_icon_size"
			android:layout_centerVertical="true"
			android:layout_margin="@dimen/dim_gap_2"
			android:src="@drawable/ic_back_white"/>
		<TextView
			android:id="@+id/tvTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dim_font_3"
			android:text="@string/str_rescue_query"/>
	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/color_bg_even"
		android:padding="@dimen/dim_gap_2"
		android:layout_marginLeft="@dimen/dim_gap_3"
		android:layout_marginRight="@dimen/dim_gap_3"
		android:layout_marginTop="@dimen/dim_gap_3"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:maxLines="2"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_aid_man"/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:maxLines="2"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_aid_time"/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:maxLines="2"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_state"/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:maxLines="2"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/dim_font_2"
			android:text="@string/str_point"/>
	</LinearLayout>
	<ListView
		android:id="@+id/lvRescueQuery"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:divider="@null"
		android:scrollbars="none"
		android:layout_marginLeft="@dimen/dim_gap_3"
		android:layout_marginRight="@dimen/dim_gap_3"/>
</LinearLayout>